Friday, March 01 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Main/Source/charba.cpp: Added a burdenstate checker to Hit function 
	* Main/Source/lterrade.cpp: Added private function Break() to door to reduce duplicated code.
	* Main/Include/lterrade.h: Added function Break() to door

Thursday, February 28 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Main/Include/itemde.h: Added scroll of taming
	* Main/Source/itemde.cpp: Added scroll of taming

Wednesday, February 27 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Main/Include/Makefile.am: Added entity.h and fluid.h (somehow these changes have been lost from CVS)
	* Main/Source/Makefile.am: Added entity.cpp and fluid.cpp (somehow these changes have been lost from CVS)
	* Main/Source/itemde.cpp: bananapeals::GetStepOnEffect for fall effect, Wand of Striking added. All BeamEffect functions changed to returing bool that tells the Beam function wheter the beam continues after the square in question.
	* Main/Include/lsquare.h: levelsquare::HasBeenHitBy added 
	* Main/Source/lsquare.cpp: levelsquare::HasBeenHitBy added
	* Main/Include/lterraba.h: overlevelterrain::HasBeenHitBy added
	* Main/Include/lterrade.h: door::HasBeenHitBy, brokendoor::HasBeenHitBy added
	* Main/Source/lterrade.cpp: door::HasBeenHitBy, brokendoor::HasBeenHitBy. That open or damage the door when an item hits it.
	* Main/Include/itemde.h: Wand of strikings color changed from yellow to white. Added Wand of fireballs
	* Main/Source/charba.cpp character::WizardMode changed so that the player now receives 5 scrolls of wishing also after activating the wizard mode.


